# leda-utils

./: .gitignore  .gitmodules  .ort.yml  README.md  run-shellcheck.sh  run-tests.sh
.devcontainer/: Dockerfile  devcontainer.json  post-attach.sh  post-start.sh
.devcontainer/resources/: containerd.service  kubectl  mosquitto.service
.github/workflows/: build-blueprint-selector.yaml  build-blueprint-selector_dev.yaml  build-kanto-auto-deployer.yaml  build-kantui.yaml  build-leda-utils.yaml  build.yaml  ocaas.yaml  release.yaml
reports/: report.xml
src/bash/: can-forward  cloudconnector.json.template  sdv-device-info  sdv-health  sdv-motd  sdv-provision  sdv.conf
src/python/kantocm-zeroconf/: README.md  kantocm-zeroconf.service  kantocm_zeroconf.py
src/rust/blueprint-selector/: Cargo.toml  README.md
src/rust/blueprint-selector/example_blueprints/: fleet_management.blueprint.json  leda_default.blueprint.json
src/rust/blueprint-selector/example_blueprints/fleet_management_manifest_licenses/: README.md
src/rust/blueprint-selector/src/: blueprint_fetchers.rs  main.rs
src/rust/blueprints-selector/: Cargo.toml
src/rust/blueprints-selector/example_blueprints/: databroker_only.blueprint.json
src/rust/kanto-auto-deployer/: .gitmodules  Cargo.toml  README.md  build.rs  main.rs
src/rust/kanto-auto-deployer/src/: fs_watcher.rs  kanto_ctr_config.json.template.in  kanto_internal_ctr_repr.json.template.in  main.rs  manifest_parser.rs  mqtt_listener.rs
src/rust/kanto-tui/: .gitignore  Cargo.toml  README.md  build.rs  kantui_conf.toml  report.html  report.json
src/rust/kanto-tui/.github/workflows/: rust.yml
src/rust/kanto-tui/src/: container_json_template.in  containers_table_view.rs  io.rs  kanto_api.rs  kantui_config.rs  lib.rs  main.rs  ui.rs
src/rust/kanto-tui/src/ui/: containers_table_view.rs  mod.rs
src/sh/: can-forward  sdv-ctr-exec  sdv-device-info  sdv-health  sdv-help  sdv-kanto-ctl  sdv-motd  sdv-provision
src/tests/: Dockerfile.shellscripts  sdv-ctr-exec-tests.bats  sdv-device-info-tests.bats  sdv-health-tests.bats  sdv-help-tests.bats  sdv-kanto-ctl-tests.bats  sdv-motd-tests.bats  sdv-provision-tests.bats
