[package]
name = "blueprint-selector"
version = "0.1.0"
edition = "2021"
description = "A user-friendly tool to select and deploy SDV blueprints"
authors = ["Vasil Ivanov vasil.ivanov3@bosch.com"]
license = "Apache-2.0"
include = ["../../../LICENSE"]
rust-version = "1.68.0"
readme = "./README.md"
repository = "https://github.com/eclipse-leda/leda-utils"
homepage = "https://eclipse-leda.github.io/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "=4.2.5", features = ["derive"] }
git2 = { version = "0.18.0", features = ["vendored-libgit2"] }
inquire = "0.6.2"
lazy_static = "1.4.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
rumqttc = "0.22.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
strum = { version = "0.25.0", features = ["derive"] }
tempdir = "0.3.7"
walkdir = "2.3.3"
