[package]
name = "kanto-auto-deployer"
version = "0.2.2"
edition = "2021"
description = "Automated deployment of Kanto Container Management Manifests"
license = "Apache-2.0"
homepage = ""
repository = "https://github.com/eclipse-leda/leda-utils"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.4"
tokio = { version = "1.20.0", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.12", default-features = false}
tonic = { version = "0.7.2" }
tower = { version = "0.4.13", default-features=false }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.89", default-features = false}
glob = "0.3.0"
anyhow = "1.0.69"
json-patch = {version  = "0.3.0", default-features = false}
log = "=0.4.18"
env_logger = "0.9.3"
notify = { version = "5.1.0", optional = true }
clap = { version = "3.2.23", features = ["derive"] }
enclose = { version = "1.1.8", optional = true }
tokio-retry = "0.3.0"

rumqttc = { version = "0.17.0"}
rustls-native-certs="=0.6.0"

[build-dependencies]
tonic-build = "0.7.2"

[[bin]]
name = "kanto-auto-deployer"
path = "src/main.rs"

[features]
default = ["filewatcher"]
filewatcher = ["notify", "enclose"]

[profile.release]
lto = true
